lab1/Test/L1-A-6-63.output
Error Type B at Line 2
Error Type B at Line 2
Error Type B at Line 5
Error Type A at Line 7
Error Type A at Line 9
Error Type B at Line 10
Error Type B at Line 13
Error Type B at Line 16
Error Type A at Line 19
Error Type B at Line 20
Error Type B at Line 23
Error Type A at Line 23
