lab1/Test/L1-A-6-63.cmm
int 
;float SEeUnwYwiHFaRTwDtH ( ) {
  int jT , UjWWl4knyZNlpvKr1 = y5GQjQ7oc , LcDPC_DUzdHG 
    
  int CqksfzYfe ;
  struct AcQNBPNRUbuqzwZuMN_h qAcL5pYHI7wq0PE4 [ 808337509 
    ] [ 942297425 %] , K3do ;
  if ( ljyzzezhFnpMuj0 ( ) = ajh6pBXFFmz03m9rKg ) 
      if ( rA4wU_lAyg5b_SLFHsQ9 )   if ( Z_ %)   XOVZMQ_TnDAY3CSsZ 
    ;== 


[ 
}
struct P {
  float Ac4zz [ 1246279522 ] , trIxQj2d_s85 185899807 
    ] ;
  float cBMFATC5hXiOLNd_vu = lpH0ECoTtlcnSuma8Z4j 
    #;
}g37w6Js9vPP4k5g [ ] [ 1838995243 ] 
;
int ;
BQ_3UrgT0BjhpKV #